--- a/src/_asset/font/variables.scss
+++ b/src/_asset/font/variables.scss
@@ -1,5 +1,5 @@
 $icomoon-font-family: "em" !default;
-$icomoon-font-path: "asset/font" !default;
+$icomoon-font-path: "asset/font" !default; // path ul asta trebe schimbat
 
 $icon_home: "\e900";
 $icon_pencil2: "\e906";
