--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,3 @@
 @import '_asset/font/style.scss';
-@import '_component/layout/layout.scss'
+@import '_component/layout/layout.scss';
+@import '_component/nav/nav.scss';
