--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
+@import '_component/config/color.scss';
 @import '_asset/font/style.scss';
 @import '_component/layout/layout.scss';
 @import '_component/nav/nav.scss';
