--- a/src/_asset/font/variables.scss
+++ b/src/_asset/font/variables.scss
@@ -1,11 +1,12 @@
 $icomoon-font-family: "em" !default;
-$icomoon-font-path: "asset/font" !default; // path ul asta trebe schimbat
+$icomoon-font-path: "asset/font" !default;
 
 $icon_home: "\e900";
-$icon_pencil2: "\e906";
+$icon_pencil: "\e906";
 $icon_phone: "\e942";
 $icon_address-book: "\e944";
 $icon_pushpin: "\e946";
+$icon_menu: "\e9bf";
 $icon_cross: "\ea0f";
 $icon_facebook: "\ea91";
 $icon_whatsapp: "\ea93";
