--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import '_component/config/color.scss';
 @import '_asset/font/style.scss';
 @import '_component/layout/layout.scss';
+@import '_component/header/header.scss';
 @import '_component/nav/nav.scss';
