--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -1,10 +1,13 @@
 .header {
   position: relative;
+  margin-top: 4.2rem;
+
   &_img {
     width: 100%;
     height: auto;
     padding-top: 5px;
   }
+
   &_inner {
     padding-left: 15px;
     width: 50%;
@@ -13,6 +16,7 @@
     top: 50px;
     color: $color-link-water;
   }
+
   &_button {
     margin-top: 20px;
     background-color: $color-black-pearl;
@@ -22,6 +26,7 @@
     border-radius: 5px;
     cursor: pointer;
   }
+
   &_button:hover {
     background-color: $color-blue-zodiac;
   }
