--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -10,5 +10,7 @@ html
     link(rel="stylesheet", href="style.css")
   body
     block content
-    include ../nav/nav
-    include ../header/header
+    .content
+      include ../nav/nav
+      include ../header/header
+      include ../about/about
