--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -9,3 +9,7 @@ html {
   height: 100%;
   font-size: calc(12px + (24 - 12)*((100vmin - 400px)/(800 - 400))); 
 }
+
+.content {
+  position: relative;
+}
