--- a/src/style.scss
+++ b/src/style.scss
@@ -2,4 +2,5 @@
 @import '_asset/font/style.scss';
 @import '_component/layout/layout.scss';
 @import '_component/header/header.scss';
+@import '_component/about/about.scss';
 @import '_component/nav/nav.scss';
