--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 extends _component/layout/layout
 block basic-config
   -
-    let myTitleForGoogleSearch = "Tyre solutions";
+    let myTitleForGoogleSearch = "Paint solutions";
     let myDescriptionForGoogleSearch = "Paint your car..";
 block content
