--- a/src/style.scss
+++ b/src/style.scss
@@ -3,4 +3,5 @@
 @import '_component/layout/layout.scss';
 @import '_component/header/header.scss';
 @import '_component/about/about.scss';
+@import '_component/updates/updates.scss';
 @import '_component/nav/nav.scss';
