Add gallery section

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,4 +4,5 @@
 @import '_component/header/header.scss';
 @import '_component/about/about.scss';
 @import '_component/updates/updates.scss';
+@import '_component/gallery/gallery.scss';
 @import '_component/nav/nav.scss';
