--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -15,3 +15,4 @@ html
       include ../header/header
       include ../about/about
       include ../updates/updates
+      include ../gallery/gallery
