--- a/src/_component/about/about.pug
+++ b/src/_component/about/about.pug
@@ -1,33 +1,29 @@
 -
   let cards = [
     {
-      title: 'Basic painting',
-      icon: 'pencil'
+      title: '24/7 Mobile Callout',
+      icon: 'hammer'
     },
     {
-      title: 'Custom painting',
-      icon: 'leaf'
+      title: 'Mobile Tyre Fitting',
+      icon: 'automobile'
     },
     {
-      title: 'Polish',
+      title: 'Mobile Tyre Repair',
       icon: 'truck'
     },
     {
-      title: 'Paint repair',
-      icon: 'magic-wand'
-    },
-    {
-      title: 'Smart repair',
-      icon: 'hammer'
+      title: 'Mobile Tyre replacement',
+      icon: 'wrench'
     }
   ]
 
 #about
 .about
-  h1 About our services
+  h1 Our services
   .line_wrapper
     hr
-  p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  p Emergency Tyre fitting at your home or work 24/7, 7 days a week, 365 days a year. We will come to you to fit your tyre, with our fittings meeting the industry standards. We'll check to see if your tyre is repairable and will repair it if it's safe to do so. If on inspection your tyre is not repairable, we will be able to fit one of our own and get your moving
   .cards
     each card in cards
       .card
