--- a/src/_component/gallery/gallery.pug
+++ b/src/_component/gallery/gallery.pug
@@ -1,6 +1,10 @@
 -
-  const images = Array.from({length: 3}, (_,key) => `../../asset/image/masina${key}.jpg`)
-  console.log(images)
+  const images = [
+    '../../asset/image/masina0.jpg',
+    '../../asset/image/masina1.jpg',
+    '../../asset/image/masina2.jpg',
+    '../../asset/image/masina3.jpg',
+  ]
 #gallery
 .gallery
   h1 Gallery
