--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -16,3 +16,4 @@ html
       include ../about/about
       include ../updates/updates
       include ../gallery/gallery
+      include ../contact/contact
