--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 extends _component/layout/layout
 block basic-config
   -
-    let myTitleForGoogleSearch = "Paint solutions";
-    let myDescriptionForGoogleSearch = "Paint your car..";
+    let myTitleForGoogleSearch = "Mobile tyres";
+    let myDescriptionForGoogleSearch = "24/7 Mobile Tyre Fitting/Repair";
 block content
