--- a/src/_component/header/header.pug
+++ b/src/_component/header/header.pug
@@ -1,9 +1,6 @@
 #header
 .header
-  img.header_img(src='../../asset/image/home-hero-image.jpg', alt="Header image")
-  .header_inner
-    div
-      i Great custom vehicle painting and smart repair services.
-    .header_button
-      a Get a quote
+  img(src='../../asset/image/test.jpg', alt="Header image")
+  .header_content
+    i 24/7 Mobile Tyre Fitting/Repair
     
