--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -2,32 +2,17 @@
   position: relative;
   margin-top: 4.2rem;
 
-  &_img {
+  img {
     width: 100%;
     height: auto;
     padding-top: 5px;
   }
 
-  &_inner {
-    padding-left: 15px;
-    width: 50%;
+  &_content {
     position: absolute;
-    left: 10px;
+    right: 5px;
     top: 50px;
+    padding: 15px;
     color: $color-link-water;
-  }
-
-  &_button {
-    margin-top: 20px;
-    background-color: $color-black-pearl;
-    padding: 5px;
-    width: 70px;
-    text-align: center;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-
-  &_button:hover {
-    background-color: $color-blue-zodiac;
   }
 }
