--- a/src/style.scss
+++ b/src/style.scss
@@ -5,4 +5,5 @@
 @import '_component/about/about.scss';
 @import '_component/updates/updates.scss';
 @import '_component/gallery/gallery.scss';
+@import '_component/contact/contact.scss';
 @import '_component/nav/nav.scss';
