--- a/src/_component/header/header.pug
+++ b/src/_component/header/header.pug
@@ -2,5 +2,6 @@
 .header
   img(src='../../asset/image/test.jpg', alt="Header image")
   .header_content
-    i 24/7 Mobile Tyre Fitting/Repair
+    h2 MOBILE TYRE SERVICE 24-HOUR
+    p Fast and affordable tyre replacement service.
     
