--- a/src/_component/nav/nav.pug
+++ b/src/_component/nav/nav.pug
@@ -1,5 +1,8 @@
 #nav
 .nav
-  .nav__menu 
-    .icon_menu
-  .nav__title Mobile tyres
+  .nav__items
+    .nav__menu 
+      .icon_menu
+    .nav__title Mobile tyres
+  .nav__phone
+    a(href="tel:+447522868930", target="_blank") CALL US +44-7522-868930
