--- a/src/_component/updates/updates.pug
+++ b/src/_component/updates/updates.pug
@@ -8,12 +8,5 @@
       div Good morning all,
       div In the light of the new announcement made by the government regarding the new lockdown, we wish to inform all of our customers that we will STAY OPEN and follow our normal opening times:
       div Monday - Saturday- 8:00am to 18:00pm.
-      div Also we are making some changes within our workshop to help protect our staff and our customers, therefore:
-      ul We ask you to please respect these:
-        li For all bookings please arrive at your given time slot and without unnecessary passengers.
-        li Please wear your mask when dropping your car off and if you utilise the waiting area.
-        li There is no customer access to the workshop area's to keep our staff safe, please respect this.
-        li If you have symptoms, or have been in contact with anyone with symptoms, please do not come to the workshop. Please call 07522868930 or write to us via instagram or facebook to rebook.
-      div We hope that you, your family and friends stay safe during these challenging times!
-      div Thanks,
-      div P1 Garage &amp; Custom Bodyworks
+  .updates_photo 
+    img(src="../../asset/image/wheel.png")
