--- a/src/_component/updates/updates.scss
+++ b/src/_component/updates/updates.scss
@@ -2,6 +2,7 @@
   text-align: center;
   padding: 15px 30px;
   color: $color-black-pearl;
+  background-color: #F9F9FB;
 
   &_post {
     width: 100%;
@@ -11,6 +12,13 @@
 
     div {
       margin-bottom: 10px;;
+    }
+  }
+
+  &_photo {
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
