--- a/src/_component/contact/contact.pug
+++ b/src/_component/contact/contact.pug
@@ -3,48 +3,16 @@
   h1 Contact us
   .line_wrapper
     hr
-  .contact_button
-    .icon_phone
-      a(href="+44-7522-868930") Call us
-  div 07522 868930
-  h1 Address
-  .contact_button
-    .get_directions
-      a(href="https://www.google.com/maps/dir//P1+Garage+%26+Custom+Bodyworks/data=!4m8!4m7!1m0!1m5!1m1!1s0x48765197bf5d8aad:0xfa78ba01153bc28b!2m2!1d-0.65191!2d51.9073658") Get directions
-  div Unit 10 Collec Depot Billington Road
-  div Leighton Buzzard
-  div LU7 9HH
-  div United Kingdom
-  h1 Business hours
-  .contact_table
-    table
-      tbody
-        tr
-          th Mon:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Tue:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Wed:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Thu:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Fri:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Sat:
-          td
-            span 8:00 AM - 6:00 PM
-        tr
-          th Sun:
-          td
-            span Closed
+  .contact_inner
+    img(src="../../asset/image/mechanic.jpg")
+    .contact_inner-text
+      h2 Get in touch
+      div We have a unique mobile tyre-fitting and replacement service. Our 24-hour emergency mobile tyre-fitting service covers all Luton and surrounding areas, especially Hertfordshire, Bedfordshire and Buckinghamshire and Middlesex with express service. In case we can help you, don't hesitate to contact us.
+      .icon_phone  Call us: 
+        a(href="tel:+447522868930", target="_blank") +447522868930
+      .icon_whatsapp  Whatsapp 
+        a(href="https://api.whatsapp.com/send?phone=447522868930&fbclid=IwAR2fCd5TBmw02mHfd9c4QZ2IsUV3N4tPGXxmiMaVGEoiTUH8Kk9YGooGivo", target="_blank") +447522868930
+      .icon_pencil  Email us: 
+        a(href="mailto:emilian.pirau.sep@gmail.com") emilian.pirau.sep@gmail.com
+        |  all the necessary information as <strong>size of the deflated tyre, your vehicle location, contact number and make and model of vehicle</strong>.
     
