--- a/src/_component/gallery/gallery.scss
+++ b/src/_component/gallery/gallery.scss
@@ -1,8 +1,13 @@
 .gallery {
   text-align: center;
+  margin-top: 15px;
 
   img {
     width: 300px;
     height: auto;
+  }
+
+  &_images {
+    margin-top: 10px;
   }
 }
