--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -17,3 +17,4 @@ html
       include ../updates/updates
       include ../gallery/gallery
       include ../contact/contact
+      include ../footer/footer
