--- a/src/_component/contact/contact.pug
+++ b/src/_component/contact/contact.pug
@@ -10,7 +10,7 @@
       div We have a unique mobile tyre-fitting and replacement service. Our 24-hour emergency mobile tyre-fitting service covers all Luton and surrounding areas, especially Hertfordshire, Bedfordshire and Buckinghamshire and Middlesex with express service. In case we can help you, don't hesitate to contact us.
       .icon_phone  Call us: 
         a(href="tel:+447522868930", target="_blank") +447522868930
-      .icon_whatsapp  Whatsapp 
+      .icon_whatsapp  Whatsapp: 
         a(href="https://api.whatsapp.com/send?phone=447522868930&fbclid=IwAR2fCd5TBmw02mHfd9c4QZ2IsUV3N4tPGXxmiMaVGEoiTUH8Kk9YGooGivo", target="_blank") +447522868930
       .icon_pencil  Email us: 
         a(href="mailto:emilian.pirau.sep@gmail.com") emilian.pirau.sep@gmail.com
