--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -15,6 +15,7 @@ html
       include ../header/header
       include ../about/about
       include ../updates/updates
+      include ../area/area
       include ../gallery/gallery
       include ../contact/contact
       include ../footer/footer
