--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import '_component/header/header.scss';
 @import '_component/about/about.scss';
 @import '_component/updates/updates.scss';
+@import '_component/area/area.scss';
 @import '_component/gallery/gallery.scss';
 @import '_component/contact/contact.scss';
 @import '_component/footer/footer.scss';
