--- a/src/_component/gallery/gallery.pug
+++ b/src/_component/gallery/gallery.pug
@@ -1,7 +1,7 @@
 -
   const images = [
-    '../../asset/image/masina2.jpg',
-    '../../asset/image/masina3.jpg',
+    `${baseUrl}asset/image/masina2.jpg`,
+    `${baseUrl}asset/image/masina3.jpg`,
   ]
 #gallery
 .gallery
