--- a/src/_component/area/area.pug
+++ b/src/_component/area/area.pug
@@ -10,4 +10,4 @@
     .area_img-wheel
       img(src=`${baseUrl}asset/image/change.jpg`)
   .area_content-map
-    img.area_img-map(src=`${baseUrl}asset/image/black.jpg`)
+    //- img.area_img-map(src=`${baseUrl}asset/image/black.jpg`)
