--- a/src/_component/gallery/gallery.pug
+++ b/src/_component/gallery/gallery.pug
@@ -1,7 +1,6 @@
 -
   const images = [
-    `${baseUrl}asset/image/masina2.jpg`,
-    `${baseUrl}asset/image/masina3.jpg`,
+    `../../asset/image/roti.jpg`,
   ]
 #gallery
 .gallery
