--- a/src/_component/gallery/gallery.pug
+++ b/src/_component/gallery/gallery.pug
@@ -1,13 +1,8 @@
--
-  const images = [
-    `../../asset/image/roti.jpg`,
-  ]
 #gallery
 .gallery
   h1 Gallery
   .line_wrapper
     hr
   .gallery_images
-    each image in images
-      img(src=`${image}`)
+    img(src="../../asset/image/roti.jpg")
   
