--- a/src/_component/nav/nav.pug
+++ b/src/_component/nav/nav.pug
@@ -3,6 +3,13 @@
   .nav__items
     .nav__menu 
       .icon_menu
-    .nav__title Mobile tyres
+    h3 Mobile tyres
   .nav__phone
     a(href="tel:+447522868930", target="_blank") CALL US +44-7522-868930
+  #nav__links
+    a(href="#about", style="background-color: #a2b8dd") Our services
+    a(href="#updates", style="background-color: #8faad6") Updates
+    a(href="#area", style="background-color: #7d9ccf") Area we cover
+    a(href="#gallery", style="background-color: #6a8ec8") Gallery
+    a(href="#contact", style="background-color: #5780c1") Contact
+      
