--- a/src/_component/nav/nav.scss
+++ b/src/_component/nav/nav.scss
@@ -1,7 +1,6 @@
 .nav {
   width: 100%;
   padding: 15px;
-  display: flex;
   box-shadow: -1px 3px 4px -3px rgba(9, 29, 52,1);
   color: $color-black-pearl;
   background-color: white;
@@ -9,6 +8,12 @@
   position: fixed;
   top: 0;
   left: 0;
+
+  &__items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
   &__menu {
     margin-right: 10px;
@@ -23,6 +28,27 @@
     a {
       text-decoration: none;
       color: white;
+    }
+  }
+
+  #nav__links {
+    display: none;
+    position: absolute;
+    left: 0;
+    bottom: -140px;
+    // display: flex;
+    flex-direction: column;
+
+    a {
+      text-decoration: none;
+      color: white;
+      margin: 2px 0;
+      padding: 5px;
+      border-top-right-radius: 2px;
+      border-bottom-right-radius: 2px;
+      -webkit-box-shadow: 2px 1px 6px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 2px 1px 6px 0px rgba(0,0,0,0.75);
+      box-shadow: 2px 1px 6px 0px rgba(0,0,0,0.75);
     }
   }
 }
