--- a/src/_component/nav/nav.scss
+++ b/src/_component/nav/nav.scss
@@ -15,8 +15,16 @@
     justify-content: space-between;
   }
 
-  &__menu {
-    margin-right: 10px;
+  &__menu,
+  &__title {
+    padding: 8px;
+    font-size: 16px;
+  }
+
+  &__menu:hover {
+    background-color: #f0f2f5;
+    // color: white;
+    border-radius: 50%;
   }
 
   &__phone {
